--- a/FractionedDictionary/FractionedDictionary/FractionedDictionary.csproj
+++ b/FractionedDictionary/FractionedDictionary/FractionedDictionary.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDictionary.cs" />
+    <Compile Include="DataHolder.cs" />
+    <Compile Include="FixedValues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
